2004-11-16  Shawn Betts  <katia_dilkina@verizon.net>

	* mkpatch: src, ref, and work are pulled from args 1, 2, and 3.

	* Makefile: Add rules for building slashem patches

	* nethack.el (nethack): call nethack-start with the process as an
	arg.
	(nethack-connect-to-server): remove
	(nethack-is-running): new function
	(nethack-start): new function
	(nethack-create-process): remove function

	* nethack-keys.el (nh-map-mode-map): add keybinding for travel command

	* nethack-cmd.el (travel): new nethack command

2004-11-14  Shawn Betts  <katia_dilkina@verizon.net>

	* nethack.el (nethack): call nethack-create-process
	(nethack-connect-to-server): new function
	(nethack-create-process): new function
	(nh-send-and-wait): check if nh-proc's status is 'open or 'run

	* nethack-cmd.el (options): new command

	* nethack-api.el (nh-options-cbreak): new defvar
	(nh-options-dec-graphics): likewise
	(nh-options-echo): likewise
	(nh-options-ibm-graphics): likewise
	(nh-options-msg-history): likewise
	(nh-options-num-pad): likewise
	(nh-options-news): likewise
	(nh-options-window-inited): likewise
	(nh-options-vision-inited): likewise
	(nh-options-menu-tab-sep): likewise
	(nh-options-menu-requested): likewise
	(nh-options-num-pad-mode): likewise
	(nh-options-purge-monsters): likewise
	(nh-options-bouldersym): likewise
	(nh-options-travelcc): likewise
	(nh-options-sanity-check): likewise
	(nh-options-mon-polycontrol): likewise
	(nhapi-options): new function

2004-11-14  Shawn Betts  <sabetts@vcn.bc.ca>

	* Makefile (DISTFILES): change nethack-glyphs.el to nethack-tiles.el
	(all): likewise

2004-11-12  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack-api.el (nh-menu-toggle-all-items): fix which regexp
	match gets replaced with '-' or '+'

2004-11-11  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack-keys.el (nh-accelerator-chars): add ?# to the vector
	(nh-accelerator-chars-regexp): new defvar
	(nh-menu-item-regexp): likewise
